--- a/app/views/spree/newsletter_subscriptions/create.js.erb
+++ b/app/views/spree/newsletter_subscriptions/create.js.erb
@@ -1,1 +1,2 @@
-$('#newsletter_subscribe').html('Thanks for subscribing!');
+$('#newsletter_subscribe_form').fadeTo(200, 0.2);
+$('#newsletter_subscribe_info').html('Thanks for subscribing!');
