--- a/app/assets/stylesheets/store/spree_newsletter.css
+++ b/app/assets/stylesheets/store/spree_newsletter.css
@@ -1,3 +1,19 @@
 /*
  *= require store/spree_core
 */
+
+#newsletter_subscribe {
+  position: relative;
+}
+
+#newsletter_subscribe_info {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+#newsletter_subscribe_info {
+  z-index: 10;
+}
