update js response to temporarily show a flash message to indicate success

--- a/app/views/spree/newsletter_subscriptions/_newsletter_subscribe_form.html.erb
+++ b/app/views/spree/newsletter_subscriptions/_newsletter_subscribe_form.html.erb
@@ -1,6 +1,3 @@
 <div id="newsletter_subscribe">
-  <%= form_tag newsletter_subscriptions_path, :remote => true do |f| %>
-    <%= text_field_tag :email, nil, :class => "email", :id => "subscribe_email", :placeholder => "Enter your email" %>
-    <%= submit_tag "Subscribe" %>
-  <% end %>
+  <%= render 'spree/newsletter_subscriptions/form' %>
 </div>
