add locale suport

--- a/app/views/spree/newsletter_subscriptions/_form.html.erb
+++ b/app/views/spree/newsletter_subscriptions/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_tag newsletter_subscriptions_path, :remote => true do |f| %>
-  <%= text_field_tag :email, nil, :class => "email", :id => "subscribe_email", :placeholder => "Enter your email" %>
-  <%= submit_tag "Subscribe" %>
+  <%= text_field_tag :email, nil, :class => "email", :id => "subscribe_email", :placeholder => t('newsletter.enter_email') %>
+  <%= submit_tag t('newsletter.subscribe') %>
 <% end %>
